# otus

./: CMakeLists.txt  boost_test_version.cpp  libVersion.cpp  libVersion.h  main.cpp
.github/workflows/: release.yml
